--- a/src/App.css
+++ b/src/App.css
@@ -258,7 +258,7 @@ h3 {
     color: white;
     border-radius: 5px;
     width: fit-content;
-    padding: 1px;
+    padding: 1px 3px;
     font-weight: 200;
     margin: 5px 5px;
     height: 25px;
